[gd_scene load_steps=13 format=2]

[ext_resource path="res://objects/dailyBonusButton.gd" type="Script" id=1]
[ext_resource path="res://images/daily.png" type="Texture" id=2]
[ext_resource path="res://images/bestScore.png" type="Texture" id=3]
[ext_resource path="res://fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://images/coins.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=2]

resource_name = "active"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 244.238, 47.152 ), Vector2( 244.238, 2.152 ), Vector2( 244.238, -2.848 ), Vector2( 244.238, 12.152 ), Vector2( 244.238, 47.152 ), Vector2( 244.238, 37.152 ), Vector2( 244.238, 47.152 ), Vector2( 244.238, 45.152 ), Vector2( 244.238, 47.152 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]

resource_name = "disable"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.518 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "end_getting"
length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=5]

length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 244.4, 47.152 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("gettinglbl:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -160, -84 ), Vector2( -160, -114 ), Vector2( -160, -124 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("coins:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -202.103, -51.1055 ), Vector2( -202.103, -76.1055 ), Vector2( -202.103, -81.1055 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("coins:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("gettinglbl:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]

length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.894029, 0.894029 ), Vector2( 0.873188, 0.873188 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.675686 ) ]
}

[sub_resource type="Animation" id=7]

resource_name = "disable"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.409922 ) ]
}

[node name="Node2D" type="Node2D"]

script = ExtResource( 1 )

[node name="daily" type="Sprite" parent="." index="0"]

position = Vector2( 244.238, 47.152 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="TouchScreenButton" type="TouchScreenButton" parent="daily" index="0"]

modulate = Color( 1, 1, 1, 0 )
position = Vector2( -242.234, -45.1099 )
scale = Vector2( 11.8643, 3.1364 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Visibility" ]

[node name="Label" type="Label" parent="daily" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -225.0
margin_top = -45.0
margin_right = 151.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "DAILY BONUS"
valign = 1
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_fonts" ]

[node name="gettinglbl" type="Label" parent="daily" index="2"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -160.0
margin_top = -84.0
margin_right = 216.0
margin_bottom = 6.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "100+10"
valign = 1
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_fonts" ]

[node name="anime" type="AnimationPlayer" parent="daily" index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/active = SubResource( 2 )
anims/disable = SubResource( 3 )
anims/end_getting = SubResource( 4 )
anims/getting = SubResource( 5 )
blend_times = [  ]

[node name="pres_anim" type="AnimationPlayer" parent="daily" index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/press = SubResource( 6 )
blend_times = [  ]

[node name="coins" type="Sprite" parent="daily" index="5"]

modulate = Color( 1, 1, 1, 0 )
position = Vector2( -202.103, -51.1055 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Timer" type="Timer" parent="daily" index="6"]

process_mode = 1
wait_time = 0.02
one_shot = false
autostart = true

[node name="danime" type="AnimationPlayer" parent="daily" index="7"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/disable = SubResource( 7 )
blend_times = [  ]

[node name="Timer2" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="distimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="sec_timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="updatetime" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = true

[connection signal="pressed" from="daily/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]

[connection signal="released" from="daily/TouchScreenButton" to="." method="_on_TouchScreenButton_released"]

[connection signal="timeout" from="daily/Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]

[connection signal="timeout" from="distimer" to="." method="_on_distimer_timeout"]

[connection signal="timeout" from="sec_timer" to="." method="_on_sec_timer_timeout"]

[connection signal="timeout" from="updatetime" to="." method="_on_updatetime_timeout"]


